# gh-aur-updater

./: PKGBUILD  PKGBUILD.bak  README.md  pyproject.toml
gh-aur-updater/: config  config.py  github_client.py  logging_utils.py  main.py  models.py  nvchecker_client.py  package_updater.py  packed-refs  utils.py
gh-aur-updater/objects/pack/: pack-a47b34dfbc7938d166e98a8a94f862b2c39278c6.idx  pack-a47b34dfbc7938d166e98a8a94f862b2c39278c6.pack  pack-a47b34dfbc7938d166e98a8a94f862b2c39278c6.rev
gh_aur_updater/: aur_client.py  config.py  exceptions.py  main.py  models.py  nvchecker_client.py  pkgbuild_parser.py  workspace_scanner.py
tests/: conftest.py  test_aur_client.py  test_config.py  test_logging_utils.py  test_models.py  test_pkgbuild_parser.py  test_utils.py
